--- a/src/sass/start/_header.scss
+++ b/src/sass/start/_header.scss
@@ -1,10 +1,11 @@
 .header {
     width: 100%;
     height: 50rem;
-    background-image: url(../../../Assets/img/fondo_sec_01.png);
+    background-image: url(../../../Assets/img/fondo_sec_movil2.webp);
     background-size: cover;
+    
     background-position: center center;
-    padding: 3rem 0;
+    padding: 2rem 0;
     &__container {
         height: 75%;
         display: flex;
@@ -14,6 +15,9 @@
     &__content {
         display: flex;
         justify-content: space-between;
+    }
+    &__logowhite{
+        transform: scale(.9);
     }
     &__content-nav {
         width: 75%;
@@ -31,9 +35,9 @@
         width: fit-content;
         text-align: end;
         display: flex;
-        gap: 3rem;
-        margin-top: 1rem;
-        margin-bottom: 1.5rem;
+        gap: 2.5rem;
+        margin-top: 1.1rem;
+        margin-bottom: 1.3rem;
     }
     &__menu-iconshop {
         display: flex;
@@ -49,10 +53,18 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 2rem;
+        gap: 1.5rem;
+    }
+    &__logo{
+        margin-top: 4rem;
+        margin-bottom: 0.8rem;
+        width: 16rem;
+
+        
     }
     &__title{
-        font-size: 1.8rem;
+        text-wrap: nowrap;
+        font-size: 1.6rem;
     }
     &__labelInput {
         width: 100%;
@@ -83,26 +95,30 @@
         width: 90%;
         margin: 0 auto;
         display: flex;
+        justify-content: flex-end;
         gap: 2rem;
-        margin-top: 2rem;
+        margin-top: 3.2rem;
+   
     }
     &__sprite {
         display: block;
-        margin-left: auto;
-
-        width: 25%;
+        // margin-left: auto;
+        width: 6rem;
+        // margin-bottom: -9rem;
     }
 }
 
 .iconred {
-    margin-top: 1.6rem;
-    margin-left: 1rem;
+    margin-top: 1.4rem;
+    margin-right: 0.7rem;
     position: relative;
     &__text {
-        top: 0.7rem;
-        left: 25%;
+        top: 0.9rem;
+        left: 36%;
         position: absolute;
         font-weight: bold;
-        letter-spacing: 0.2rem;
+        letter-spacing: 0.1rem;
+        font-size: 1.3rem;
+        text-wrap: nowrap;
     }
 }
