--- a/src/sass/start/_popular.scss
+++ b/src/sass/start/_popular.scss
@@ -1,15 +1,54 @@
 .popular{
     width: 100%;
-    height: 53rem;
+    height: 74rem;
     background: #000000;
+    overflow: hidden;
+
 
    &__background{
     width: 100%;
     height: 100%;
     padding: 3rem 0;
     background-image: url(../../../Assets/Icons/Mask\ group.svg);
+    position: relative;
    }
    &__img{
     margin: 0 auto;
+   }
+   &__list{
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding: 0 2rem;
+   }
+   &__li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
+
+   &__slider{
+    margin: 4rem 0;
+    width: 100%;
+    display: flex;
+    flex-shrink: 0;
+    flex-direction: row;
+    gap: 3.5rem;
+    padding: 0 4rem 0 2.8rem;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+   }
+   &__text{
+ 
+    width: 55%;
+    padding: 0 1rem;
+    margin: 0 auto;
+    text-align: center;
+
+    border-bottom: .1rem solid white;
    }
 }
