--- a/src/sass/global/_globals.scss
+++ b/src/sass/global/_globals.scss
@@ -34,11 +34,11 @@ html {
     margin: 0 auto;
   }
 
-  [class*="__img"] {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
+  // [class*="__img"] {
+  //   display: block;
+  //   max-width: 100%;
+  //   height: auto;
+  // }
   body {
     font-family: var(--primary-font);
     font-size: 1.6rem;
@@ -46,4 +46,11 @@ html {
      min-height: auto;
   
      color: white;
+  }
+
+
+  .line{
+    width: 100%;
+    height: 0.6rem;
+    background-color: white;
   }
