--- a/src/sass/start/_popular.scss
+++ b/src/sass/start/_popular.scss
@@ -10,9 +10,11 @@
     height: 100%;
     padding: 3rem 0;
     background-image: url(../../../Assets/Icons/Mask\ group.svg);
-    position: relative;
+  
    }
+  
    &__img{
+    display: block;
     margin: 0 auto;
    }
    &__list{
@@ -29,7 +31,11 @@
     justify-content: center;
     align-items: center;
    }
+&__slider-container{
+    max-width: 100vw;
+    position: relative;
 
+}
    &__slider{
     margin: 4rem 0;
     width: 100%;
@@ -37,7 +43,9 @@
     flex-shrink: 0;
     flex-direction: row;
     gap: 3.5rem;
-    padding: 0 4rem 0 2.8rem;
+   
+   
+    // padding: 0 4rem 0 2.8rem;
     overflow: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
@@ -47,8 +55,19 @@
     width: 55%;
     padding: 0 1rem;
     margin: 0 auto;
+    text-wrap: balance;
+    font-size: 1.7rem;
     text-align: center;
-
-    border-bottom: .1rem solid white;
+    position: relative;
+    
+    &::after{
+        content: "";
+        display: block;
+        width: 65%;
+        height: .1rem;
+        background-color: rgb(255, 255, 255);
+        margin: 0.5rem auto;
+    }
    }
+
 }
