--- a/src/sass/start/index2.scss
+++ b/src/sass/start/index2.scss
@@ -1,4 +1,6 @@
 @forward 'header.scss';
 @forward 'nav';
 @forward 'popular';
-@forward 'card'
+@forward 'card';
+@forward 'new';
+@forward '_categories';
