--- a/src/sass/start/__categories.scss
+++ b/src/sass/start/__categories.scss
@@ -3,60 +3,88 @@
     height: 55.6rem;
     background-color: #000;
     overflow: hidden;
+
     &__background {
         width: 100%;
         height: 100%;
         background-image: url(/Assets/Icons/Mask\ group.svg);
+        
     }
     &__imgtitle {
         display: block;
         width: 80%;
         margin: 0 auto;
-        padding: 3rem 0;
+        padding-top: 4rem;
     }
 
     &__slider-container {
-        margin: 0 2rem;
+        margin-left: 2rem;
     }
     &__slider {
         display: flex;
-        gap: 2rem;
+        gap: 0rem;
         overflow: scroll;
         flex-shrink: 0;
     }
     &__card {
-        width: 29.8rem;
-        height: 29.2rem;
+        width: 26.8rem;
+        height: 26.2rem;
         flex-shrink: 0;
        
-        scale: .9;
-     
-          
-    }
-    &__card-img {
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-repeat: no-repeat;
+        scale: .98;
         display: flex;   
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
-       
-        &--1{
-            background-image: url(/Assets/img/makis.png);
+        filter: brightness(80%);
+    }
+    &__card--one {
+        flex-shrink: 0;
+        background-image: url(/Assets/img/makis.png);
     
-        }
-        &--2{
-
-        }
     
     }
-    &__card-title{
-      font-size: 3.2rem;
+    &__card--two{
+        background-image: url(/Assets/img/ramen.png);
+    }
+    &__card--tree{
+        background-image: url(/Assets/img/calientes.png);
+    }
+    &__card--four{
+        background-image: url(/Assets/img/sashimi.png);
+    }
+    &__title{
+        display: block;
+       
+        
+      font-size: 1.8rem;
+      font-family: var(--font-dela-gothic);
+    
     margin-bottom: 2rem;
     }
-
+    &__iconend{
+        all: unset;
+        display: block;
+        margin: 0 auto;
+       
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        position: relative;
+        font-family: var(--font-dela-gothic);
+      
+        &::after{
+            position: absolute;
+            display: block;
+            font-size: 1.3rem;
+         
+            content: "TODAS LAS CATEGORIAS";
+            transform: rotate(-3deg);
+            color: #2473A6;
+        }
+    }
+    
 }
 
 
