--- a/src/sass/start/_card.scss
+++ b/src/sass/start/_card.scss
@@ -3,69 +3,99 @@
     // height: 33.6rem;
     width: 19.1rem;
     height: auto;
-    padding-bottom: 2rem;
+    // padding-bottom: 2rem;
     overflow: hidden;
     border-radius: .8rem;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     flex-shrink: 0;
     &__figure{
         flex-shrink: 0;
         display: block;
         width: 100%;
-        max-height: 15.3rem;
+        height: 15.3rem;
+        background-image: url(/Assets/img/img1popular.png);
         border-top-right-radius: .8rem;
         border-top-left-radius: .8rem;
-        object-fit: cover;
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 95%);
+       background-size: cover;
+       background-repeat: no-repeat;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 89%);
+        overflow: hidden;
         filter: brightness(70%);
-        aspect-ratio: 16/9;
+        // aspect-ratio: 16/9;
+        
+        
+    }
+    &__figure--two{
+        background-image: url(/Assets/img/img2popular.png);
+        background-size: cover;
+    }
+    &__figure__tree{
+        background-image: url(/Assets/img/img3popular.png);
+        background-size: cover;
+    }
+    &__figure__four{
+        background-image: url(/Assets/img/img4popular.png);
+        background-size: cover;
     }
     &__img{
+        display: block;
         max-width: 100%;
         max-height: 100%;
         object-fit: cover;
         aspect-ratio: 16/9;
+       
     }
     
     &__info{
       
         background-color: white;
-        clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
+        margin-top: -1.1rem;
         padding: 2rem 2rem 3.5rem 2rem;
         text-align: center;
         border-bottom-left-radius: .8rem;
         border-bottom-right-radius: .8rem;
-        
+        clip-path: polygon(0 0, 100% 9%, 100% 100%, 0 100%);
     }
     &__title{
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         letter-spacing: .1rem;
         color: #000000;
+        font-family: var(--font-syncopate-bold);
+        text-wrap: nowrap;
     }
     &__paragraph{
         font-size: 1.4rem;
         color: #000000;
+        font-family: var(--font-pingfang-regular);
     }
     &__price{
         color: #FF0000;
-        font-weight: 700;
+        font-family: var(--font-dela-gothic);
     }
     &__btn{
+        all: unset;
         display: block;
         width: 16rem;
         height: 5rem;
-        background-color: #F3EBE2;
-        border: .2rem solid #2473A6;
-        color: #2473A6;
-        font-weight: 600;
-        letter-spacing: .1rem;
-        border-radius: .5rem;
+        position: relative;
+        z-index: 2;
         margin: 0 auto;
-        margin-top: -2.8rem;
-        transform: rotate(-4deg);
-        text-transform: uppercase;
-       
+        margin-top: -2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &::after{
+            content: "AGREGAR";
+            position: absolute;
+            color: #2473A6;
+            transform: rotate(-4deg);
+            font-size: 1.2rem;
+            letter-spacing: .1rem;
+            font-family: var(--font-dela-gothic);
+        }
     }
+
+
     &__arrow-next{
         position: absolute;
         top: 50%;
