--- a/src/sass/start/_header.scss
+++ b/src/sass/start/_header.scss
@@ -1,3 +1,5 @@
+@use  '../global/globals';
+
 .header {
     width: 100%;
     height: 50rem;
@@ -64,13 +66,17 @@
     }
     &__title{
         text-wrap: nowrap;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
+        font-family: var(--font-dela-gothic);
+        letter-spacing: 0.37px;
+        font-weight: 400;
     }
     &__labelInput {
         width: 100%;
         display: block;
         position: relative;
         margin: 0 auto;
+       
     }
     &__input {
         display: block;
@@ -78,8 +84,11 @@
         height: 4rem;
         background-color: transparent;
         border: 0.1rem solid #fff;
-        padding: 0 1rem;
+        padding: 0 1rem 0 3rem;
         border-radius: 0.6rem;
+        color: white;
+        font-family: var(--font-pingfang-regular);
+        
         &::placeholder {
             color: #fff;
         }
@@ -104,7 +113,8 @@
         display: block;
         // margin-left: auto;
         width: 6rem;
-        // margin-bottom: -9rem;
+        display: flex;
+        align-items: center;
     }
 }
 
@@ -113,12 +123,13 @@
     margin-right: 0.7rem;
     position: relative;
     &__text {
-        top: 0.9rem;
-        left: 36%;
+        top: 1rem;
+        left: 30%;
         position: absolute;
         font-weight: bold;
-        letter-spacing: 0.1rem;
-        font-size: 1.3rem;
+        font-size: 1.1rem;
         text-wrap: nowrap;
+      
+        font-family: var(--font-dela-gothic);
     }
 }
