--- a/src/sass/start/_information.scss
+++ b/src/sass/start/_information.scss
@@ -1,6 +1,17 @@
 .information{
     width: 100%;
-    height: 55.9rem;
+    height: 56.9rem;
     background-image: url(/Assets/Icons/informationBackground.svg);
     background-size: cover;
+    &__title{
+      
+        width: 65%;
+        padding: 6rem 0 2rem 3rem;
+        text-wrap: balance;
+        font-family: var( --font-syncopate-bold);
+    }
+    &__paragraph{
+        font-size: 1.4rem;
+        text-wrap: pretty;
+    }
 }
