--- a/src/sass/start/_information.scss
+++ b/src/sass/start/_information.scss
@@ -1,17 +1,41 @@
 .information{
     width: 100%;
-    height: 56.9rem;
+    height: 55.5rem;
     background-image: url(/Assets/Icons/informationBackground.svg);
     background-size: cover;
+    background-position: top ;
+    // overflow: hidden;
     &__title{
       
         width: 65%;
-        padding: 6rem 0 2rem 3rem;
+        padding: 6.5rem 0 2rem 3rem;
         text-wrap: balance;
         font-family: var( --font-syncopate-bold);
     }
     &__paragraph{
-        font-size: 1.4rem;
+        width: 28.2rem;
+        padding: 1rem 0 0rem 4rem;
+        font-size: 1.2rem;
         text-wrap: pretty;
+        font-family: var(--font-pingfang-regular);
     }
+    &__img{
+        display: block;
+        width: 100%;
+        margin-top: -2rem;
+      
+        object-fit: cover;
+    }
+    &__imgfood{
+        display: block;
+        width: 24.5rem;
+        height: 13.4rem;
+        object-fit: cover;
+        margin-top: -7rem;
+        transform: scale(.9);
+        position: relative;
+        z-index: 60;
+    }
+  
+ 
 }
