avanze combo box

--- a/src/sass/start/__categories.scss
+++ b/src/sass/start/__categories.scss
@@ -48,7 +48,7 @@
         background-image: url(/Assets/img/ramen.png);
     }
     &__card--tree{
-        background-image: url(/Assets/img/calientes.png);
+        background-image: url(/Assets/img/calientes.webp);
     }
     &__card--four{
         background-image: url(/Assets/img/sashimi.png);
