--- a/src/sass/start/_new.scss
+++ b/src/sass/start/_new.scss
@@ -5,7 +5,7 @@
     &__background{
         width: 100%;
         height: 80rem;
-        background-image: linear-gradient(90deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 69%, rgba(0,0,0,0.8) 100%), url(/Assets/img/backgroundNovedades.png);
+        background-image: linear-gradient(90deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 69%, rgba(0,0,0,0.8) 100%), url(/Assets/img/backgroundNovedades.webp);
         background-size: cover;
         position: relative;
      
