--- a/src/sass/start/_card.scss
+++ b/src/sass/start/_card.scss
@@ -1,3 +1,4 @@
+@use '../global/mixins' as m;
 .card{
     // width: 23.7rem;
     // height: 33.6rem;
@@ -8,6 +9,10 @@
     border-radius: .8rem;
     margin-bottom: 2rem;
     flex-shrink: 0;
+    @include m.tablet {
+        width: 23.7rem;
+        height: 35rem;
+    }
     &__figure{
         flex-shrink: 0;
         display: block;
