--- a/src/sass/start/_footer.scss
+++ b/src/sass/start/_footer.scss
@@ -163,7 +163,7 @@
     width: 100%;
      height : calc(96.9rem - 74.5rem);
   /* Fondo con degradado */
-  background: url(/Assets/img/backgroundNovedades.png);
+  background: url(/Assets/img/backgroundNovedades.webp);
   background-repeat: no-repeat;
   background-position: left center;
   display: flex;
