--- a/src/sass/start/__categories.scss
+++ b/src/sass/start/__categories.scss
@@ -1,3 +1,4 @@
+@use '../global/mixins' as m;
 .categories {
     width: 100%;
     height: 55.6rem;
@@ -8,6 +9,9 @@
         width: 100%;
         height: 100%;
         background-image: url(/Assets/Icons/Mask\ group.svg);
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
         
     }
     &__imgtitle {
@@ -15,6 +19,10 @@
         width: 80%;
         margin: 0 auto;
         padding-top: 4rem;
+        @include m.tablet {
+          
+            width: 49.2rem;
+        }
     }
 
     &__slider-container {
@@ -37,6 +45,9 @@
         justify-content: flex-end;
         align-items: center;
         filter: brightness(80%);
+        @include m.tablet {
+            scale: 1;
+        }
     }
     &__card--one {
         flex-shrink: 0;
