--- a/src/sass/start/_header.scss
+++ b/src/sass/start/_header.scss
@@ -1,4 +1,5 @@
 @use  '../global/globals';
+@use '../global/mixins' as m;
 
 .header {
     width: 100%;
@@ -8,6 +9,9 @@
     
     background-position: center center;
     padding: 2rem 0;
+    @include m.tablet {
+        height: 70.8rem;
+    }
     &__container {
         height: 75%;
         display: flex;
@@ -20,9 +24,16 @@
     }
     &__logowhite{
         transform: scale(.9);
+        @include m.tablet {
+            transform: scale(1);
+        }
+      
     }
     &__content-nav {
         width: 75%;
+        @include m.tablet {
+            width: 100%;
+        }
     }
 
     &__menu {
@@ -45,8 +56,29 @@
         display: flex;
         align-items: center;
         gap: 0.6rem;
+     &--movil{
+            display: block;
+            @include m.tablet {
+                display: none;
+            }
+        }
+        &--tablet{
+            display: none;
+            @include m.tablet {
+                display: block;
+                display: flex;
+            }
+        }
     }
-
+    &__shopIcons{
+        align-self: flex-end;
+        width: 85%;
+        margin-left: auto;
+        display: flex;
+        justify-content: flex-end;
+        gap: 1rem;
+       
+    }
     &__content-text {
         margin: 0 auto;
         width: 95.7%;
@@ -61,6 +93,10 @@
         margin-top: 4rem;
         margin-bottom: 0.8rem;
         width: 16rem;
+        @include m.tablet {
+            margin-top: 2rem;
+            width: 25.6rem;
+        }
 
         
     }
@@ -70,12 +106,18 @@
         font-family: var(--font-dela-gothic);
         letter-spacing: 0.37px;
         font-weight: 400;
+      @include m.tablet {
+        font-size: 1.8rem;
+      }
     }
     &__labelInput {
         width: 100%;
         display: block;
         position: relative;
         margin: 0 auto;
+        @include m.tablet {
+            width: 53.7rem;
+        }
        
     }
     &__input {
@@ -107,7 +149,19 @@
         justify-content: flex-end;
         gap: 2rem;
         margin-top: 3.2rem;
+      @include m.tablet {
+        flex-direction: column-reverse;
+        align-items: flex-end;
+        margin-top: -13rem;
+        gap: 5rem;
+      }
    
+    }
+    &__IocnWhatssap{
+        width: 3rem;
+        @include m.tablet {
+            width: 4.5rem;
+        }
     }
     &__sprite {
         display: block;
@@ -115,6 +169,10 @@
         width: 6rem;
         display: flex;
         align-items: center;
+        @include m.tablet {
+            width: 11.6rem;
+        }
+   
     }
 }
 
