--- a/src/sass/start/_nav.scss
+++ b/src/sass/start/_nav.scss
@@ -1,36 +1,147 @@
-.navbar{
+@use '../global/mixins' as m;
+.navbar {
     width: 25rem;
-    height: 100%;
+    height: 100vh;
+    height: 100dvh;
     top: 0;
-    left: 0;
-  position: fixed;
-  z-index: 10;
-  background-color: rgb(36, 36, 181);
-
-  animation: menuside 1s forwards;
-  display: none;
- 
-    &__list{
+    right: 0;
+    position: fixed;
+    z-index: 100;
+    background-color: #2473A6;
+    animation: menuside 1s forwards;
+    border-top-left-radius: .6rem;
+    border-bottom-left-radius: .6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    display: none;
+   
+    &::after{
+        content: "";
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-top-left-radius: .6rem;
+        border-bottom-left-radius: .6rem;
+        background: linear-gradient(0deg, rgba(36,115,166,0) 0%, #2573a7cc 18%, rgba(36,115,166,1) 28%);
         
+    }
+    &__content-close{
+        margin: 2rem 0;
+        display: block;
+        display: flex;
+        justify-content: flex-end;
+    }
+    &__items{
+        padding: 0 2rem;
+        z-index: 50;
+        scale: .95;
+        @include m.telefonom {
+            scale: 1;
+        }
+        
+    }
+    &__combo{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    &__background{
+        display: block;
+    
+        width: 100%;
+        mask-image: linear-gradient( transparent, #2573a7cc 16%,);
+        object-fit: cover;
+    }
+    &__contentTwo{
+        width: 100%;
+        margin: 2rem 0;
+
+        
+    }
+    &__list {
+       margin: 3rem 0;
+       display: flex;
+       flex-direction: column;
+       gap: 1rem;
+    }
+
+    &__list-li{
+     padding-left: 2.5rem;
+     font-size: 1.9rem;
+     font-family: var(--font-pingfang-medium);
+    
+    }
+    &__contentTwo-Icons{
+        display: flex;
+        flex-direction: column;
+        padding-left: 2rem;
+        gap: 1.5rem;
+    }
+    &__Icons-label{
+        display: block;
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+        font-family: var(--font-pingfang-regular);
+    }
+    &__check {
         display: none;
     }
-    &__check{
-        display: none;
+    &__btnReserve{
+        all: unset;
+        display: block;
+        width: 100%;
+        max-width: 22rem;
+        height: 3.5rem;
+        background-color: white;
+        color: #2473A6;
+        text-align: center;
+        border-radius: 0.5rem;
+        border-bottom-left-radius: 1rem;
+        margin: 1.5rem auto;
+        font-family: var(--font-dela-gothic);
+       
+        &--tablet{
+            display: none;
+            @include m.tablet {
+                display: block;
+            }
+        }
     }
 }
 
-@keyframes menuside{
-    0%{
-        transform: translateX(-150%);
+// redes
+.networks{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+   
+    
+}
+
+@keyframes menuside {
+    0% {
+        transform: translateX(150%);
     }
-    100%{
+    100% {
         transform: translateX(0);
     }
 }
 
-#navbarhidden:not(:checked){
+#navbarhidden:not(:checked) {
     display: none;
 }
-#navbarhidden:checked + .navbar{
+#navbarhidden:checked + .navbar {
     display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.navbar:has(#navbarcheck:checked){
+    display: none;
 }
