--- a/src/sass/start/_popular.scss
+++ b/src/sass/start/_popular.scss
@@ -1,3 +1,4 @@
+@use '../global/mixins' as m;
 .popular{
     width: 100%;
     height: 74rem;
@@ -19,6 +20,9 @@
    &__img{
     display: block;
     margin: 0 auto;
+    @include m.tablet {
+        width: 28.6rem;
+    }
    }
    &__list{
     display: flex;
@@ -27,6 +31,11 @@
     font-size: 1.3rem;
     font-weight: 500;
     padding: 0 2rem;
+    @include m.tablet {
+        justify-content: space-evenly;
+        font-size: 1.5rem;
+        margin-bottom: 4rem;
+    }
    }
    &__li{
     display: flex;
@@ -55,6 +64,10 @@
     overflow: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
+    @include m.tablet {
+        margin: 0;
+        margin-top: 1rem;
+    }
    }
    &__text{
  
