--- a/src/sass/start/_nav.scss
+++ b/src/sass/start/_nav.scss
@@ -48,6 +48,9 @@
         display: flex;
         flex-direction: column;
         gap: 2rem;
+        @include m.tablet {
+            display: none;
+        }
     }
     &__background{
         display: block;
