cambios echos header terminado popular en tablet

--- a/src/sass/start/__categories.scss
+++ b/src/sass/start/__categories.scss
@@ -32,6 +32,7 @@
         display: flex;
         gap: 0rem;
         overflow: scroll;
+        scrollbar-width: none;
         flex-shrink: 0;
     }
     &__card {
