--- a/src/sass/start/_exlusive.scss
+++ b/src/sass/start/_exlusive.scss
@@ -1,9 +1,14 @@
+@use '../global/mixins' as m;
 .exclusive{
     width: 100%;
     background-color: white;
     padding: 1rem;
     position: relative;
-
+    @include m.tablet {
+        display: flex;
+        height: 33.5rem;
+        gap: 1rem;
+    }
     &__oneImg{
         width: 100%;
         height: 46.5rem;
@@ -13,6 +18,11 @@
         clip-path: polygon(0 0, 100% 0, 100% 65%, 0 100%);
         position: relative;
         filter: brightness(90%);
+        @include m.tablet {
+           width: 60%;
+            height: auto;
+            clip-path: polygon(0 0, 76% 0, 100% 100%, 0% 100%);
+        }
 
     }
     &__twoImg{
@@ -24,6 +34,14 @@
         margin-top: -15.5rem;
         position: relative;
         filter: brightness(90%);
+        @include m.tablet {
+            width: 53%;   
+            margin-left: -14.4%;
+            margin-top: 0;
+            height: auto;
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 27.4% 100%);
+            background-position: center;
+        }
     }
     &__oneIcon{
         position: absolute;
@@ -36,18 +54,32 @@
         position: absolute;
         top: 28%;
         margin-left: 3rem;
+        @include m.tablet {
+            top: 30%;
+            margin-left: 28%;
+        }
        
     }
     &__treeIcon{
         position: absolute;
         top: 35%;
-        margin-left: 3.5rem;
+        
         z-index: 3;
+        @include m.tablet {
+            scale: .8;
+            top: 10%;
+            right: 16%;
+        }
     }
     &__fourIcon{
         position: absolute;
         top: 60%;
         left: 25%;
+       @include m.tablet {
+        scale: .85;
+        top: 55%;
+        left: 40%;
+       }
     }
  
     &__fiveIcon{
