--- a/src/sass/start/_information.scss
+++ b/src/sass/start/_information.scss
@@ -1,16 +1,31 @@
+@use '../global/mixins' as m;
 .information{
     width: 100%;
     height: 55.5rem;
     background-image: url(/Assets/Icons/informationBackground.svg);
     background-size: cover;
-    background-position: top ;
-    // overflow: hidden;
+    background-position: top;
+    position: relative;
+    @include m.tablet {
+        background-position: 75% 25%;
+    }
+    &__content-text{
+        @include m.tablet {
+         
+            width: 65%;
+        }
+        
+    }
     &__title{
       
         width: 65%;
         padding: 6.5rem 0 2rem 3rem;
         text-wrap: balance;
         font-family: var( --font-syncopate-bold);
+        @include m.tablet {
+            text-wrap: wrap;
+            width: 100%;
+        }
     }
     &__paragraph{
         width: 28.2rem;
@@ -18,14 +33,23 @@
         font-size: 1.2rem;
         text-wrap: pretty;
         font-family: var(--font-pingfang-regular);
+        @include m.tablet {
+            width: 80%;
+        }
     }
     &__img{
         display: block;
         width: 100%;
         margin-top: -2rem;
-      
-        object-fit: cover;
-    }
+        object-fit: cover; 
+        @include m.tablet {
+            width: 65%;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+       }
     &__imgfood{
         display: block;
         width: 24.5rem;
@@ -35,6 +59,13 @@
         transform: scale(.9);
         position: relative;
         z-index: 60;
+        @include m.tablet {
+            width: 44.2rem;
+            height: auto;
+            position: absolute;
+            bottom: -15%;
+            left: 5%;
+        }
     }
   
  
