--- a/src/sass/global/_globals.scss
+++ b/src/sass/global/_globals.scss
@@ -1,4 +1,5 @@
 
+@use 'mixins' as m;
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&display=swap');
 @font-face {
   font-family: 'Dela Gothic One';
@@ -119,11 +120,30 @@ html {
   
     font-size: 1.6rem;
     line-height: 1.6;
-     min-height: auto;
-  
+     min-height: 100vh;
      color: white;
+     overflow-x: hidden;
+     overflow-y: scroll;
+     scrollbar-width: none;
   }
+/* Personalización del scroll en navegadores WebKit */
+body::-webkit-scrollbar {
+  width: 12px; /* Ancho del scrollbar */
+}
 
+body::-webkit-scrollbar-track {
+  background: #1e1e1e; /* Color del track (fondo del scroll) */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ff6347; /* Color de la barra de desplazamiento */
+  border-radius: 10px; /* Bordes redondeados de la barra */
+  border: 3px solid #1e1e1e; /* Espacio entre la barra y el borde */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #ff4500; /* Color cuando pasas el mouse sobre el scroll */
+}
 
   .line{
     width: 100%;
@@ -134,12 +154,18 @@ html {
       margin-left: -2rem;
       height: .1rem;
       background-color: #F3EBE24D;
+      @include m.desktop {
+        display: none;
+      }
     }
   }
 .iconred{
   &__sprite{
     width: 100%;
     display: block;
+  }
+  @include m.desktop {
+    height: min-content;
   }
 }
   .iconred--ml{
