--- a/src/sass/start/_popular.scss
+++ b/src/sass/start/_popular.scss
@@ -5,7 +5,9 @@
     background: #000000;
     overflow: hidden;
 
-
+    @include m.desktop {
+        min-height: 100vh;
+    }
    &__background{
     width: 100%;
     height: 100%;
@@ -49,17 +51,32 @@
     }
    }
    &__li{
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: var(--font-pingfang-regular);
+    cursor: pointer;
+   
+    @include m.desktop {
+        
+    }
+    &:hover{
+        @include m.desktop {
+            transition: .3s;
+            color: red;
+        }
+    }
 
    }
 &__slider-container{
     max-width: 100vw;
     position: relative;
     margin-left: 2rem;
+    @include m.desktop {
+        margin-left: 0;
+    }
 
 }
    &__slider{
@@ -69,15 +86,15 @@
     flex-shrink: 0;
     flex-direction: row;
     gap: 3.5rem;
-   
-   
-    // padding: 0 4rem 0 2.8rem;
     overflow: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
     @include m.tablet {
         margin: 0;
         margin-top: 1rem;
+    }
+    @include m.desktop {
+        justify-content: center;
     }
    }
    &__text{
