--- a/src/sass/start/_footer.scss
+++ b/src/sass/start/_footer.scss
@@ -26,13 +26,18 @@
         background-position: right center; /* Ajusta la posición de la imagen */
         background-size: cover;
     }
+    @include m.desktop {
+        background: linear-gradient(90deg, #000 70%, rgba(0, 0, 0, 0.3) 100%) ,url(/Assets/img/backgroundNovedades.webp);
+    }
    }
     padding: 9rem 0 2rem 0;
     &__container{
         width: 92%;
         position: relative;
         z-index: 10;
-       
+       @include m.desktop {
+        max-width: 120rem;
+       }
     }
     &__grid {
         width: 100%;
@@ -53,6 +58,21 @@
          row-gap: 2rem;
          place-content: center;
          place-items: end;
+        }
+        @include m.desktop {
+            width: 100%;
+            display: grid;
+            grid-template-areas: 
+                'images list newsletter'
+                ;
+             
+            grid-template-columns: 21rem 1fr 1fr;
+            grid-template-rows: unset;
+            align-items: start;   // Alinea verticalmente en la parte superior (top)
+            justify-items: center; // Alinea horizontalmente en el centro
+            gap: 2rem;
+        
+          
         }
     }
 &__content-list{
@@ -92,6 +112,10 @@
         margin-bottom: 1rem;
         position: relative;
     }
+    @include m.desktop {
+        gap: 3rem;
+        margin-top: 2rem;
+    }
     &::after{
         display: none;
         content: "";
@@ -111,7 +135,10 @@
     font-family: var(--font-syncopate-bold);
     font-size: 1.4rem;
    
-   
+   @include m.desktop {
+    display: flex;
+    gap: 1rem;
+   }
 }
 &__list-subtitle{
   font-family: var(--font-pingfang-regular);  
@@ -121,6 +148,9 @@
     font-size: 1.1rem;
     font-family: var(--font-pingfang-regular);  
     padding-left: 2rem;
+    @include m.desktop {
+        text-wrap: nowrap;
+    }
 }
 &__imgbook{
 width: 11.6rem;
@@ -138,6 +168,11 @@ width: 11.6rem;
     grid-area: newsletter;
     @include m.tablet {
      margin: 0;
+    }
+    @include m.desktop {
+    
+        width: 75%;
+        margin-top: 2rem;
     }
 }
 &__newsletter-title{
@@ -245,7 +280,10 @@ width: 11.6rem;
     background: #000;
   }
   
-  
+  @include m.desktop {
+    margin-top: -10rem;
+    margin-bottom: 7rem;
+  }
    
 }
 &__payments-cards{
