--- a/src/sass/start/_header.scss
+++ b/src/sass/start/_header.scss
@@ -119,6 +119,7 @@
         display: flex;
         align-items: center;
         gap: 1rem;
+        cursor: pointer;
     }
     &__menu-iconUserspan{
         display: none;
