--- a/src/sass/start/_nav.scss
+++ b/src/sass/start/_nav.scss
@@ -107,6 +107,7 @@
      padding-left: 2.5rem;
      font-size: 1.9rem;
      font-family: var(--font-pingfang-medium);
+     cursor: pointer;
     
     }
     &__contentTwo-Icons{
