--- a/src/sass/app.css
+++ b/src/sass/app.css
@@ -894,6 +894,7 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  transition: transform 0.3s;
 }
 .card__btn::after {
   content: "AGREGAR";
@@ -903,6 +904,9 @@ body::-webkit-scrollbar-thumb:hover {
   font-size: 1.2rem;
   letter-spacing: 0.1rem;
   font-family: var(--font-dela-gothic);
+}
+.card__btn:hover {
+  transform: scale(1.02);
 }
 .card__arrow-next {
   position: absolute;
@@ -1863,6 +1867,12 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  font-size: 1.2rem;
+}
+@media (min-width: 768px) {
+  .modal-entrega__btn {
+    font-size: 1.7rem;
+  }
 }
 
 @keyframes modalresize {
@@ -1891,6 +1901,7 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: center;
   align-items: center;
   z-index: 380;
+  display: none;
 }
 .shop__content {
   width: 59rem;
@@ -1899,6 +1910,13 @@ body::-webkit-scrollbar-thumb:hover {
   grid-template-columns: 26rem 1fr;
   background-color: white;
   border-radius: 1.2rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transform: scale(0.7);
+}
+@media (min-width: 768px) {
+  .shop__content {
+    transform: scale(1);
+  }
 }
 .shop__background {
   display: block;
@@ -1913,14 +1931,15 @@ body::-webkit-scrollbar-thumb:hover {
   padding: 1.5rem 3rem;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1.2rem;
 }
 .shop__figure {
   display: block;
   width: 100%;
-  height: 4.5rem;
+  height: 5rem;
   border-top-right-radius: 1.2rem;
   overflow: hidden;
+  position: relative;
 }
 .shop__figure img {
   max-width: 100%;
@@ -1929,6 +1948,19 @@ body::-webkit-scrollbar-thumb:hover {
      object-fit: cover;
   -o-object-position: bottom;
      object-position: bottom;
+}
+.shop__figure-close {
+  position: absolute;
+  width: 3.5rem;
+  height: 3.5rem;
+  background-color: #2473A6;
+  top: 0.8rem;
+  right: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 .shop__title {
   font-family: var(--font-syncopate-bold);
@@ -1975,11 +2007,18 @@ body::-webkit-scrollbar-thumb:hover {
   width: -moz-fit-content;
   width: fit-content;
   height: auto;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: -2rem;
+  margin-top: -0.2rem;
   position: relative;
   display: flex;
   align-items: center;
   font-family: var(--font-dela-gothic);
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+.shop__btnAdd:hover {
+  transform: scale(1.02);
 }
 .shop__btnAdd-img {
   display: block;
@@ -1988,24 +2027,38 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: space-between;
   align-items: center;
 }
-.shop__btnAdd-text {
+.shop__btnAdd-texts {
+  width: 100%;
+  height: auto;
   display: block;
   position: absolute;
-  left: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  color: #2473A6;
   transform: rotate(-3deg);
+}
+.shop__btnAdd-text {
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  font-family: var(--font-dela-gothic);
 }
 .shop__btnAdd-text::after {
   content: "";
   width: 0.1rem;
-  height: 2rem;
+  height: 2.5rem;
   display: block;
   background-color: blue;
 }
 .shop__btnAdd-precio {
   display: block;
-  position: absolute;
-  right: 2rem;
-  transform: rotate(-5deg);
+  font-family: var(--font-dela-gothic);
+}
+
+.shop.active {
+  display: flex;
 }
 
 .content-login {
