--- a/src/sass/componentes/_modalEntrega.scss
+++ b/src/sass/componentes/_modalEntrega.scss
@@ -1,3 +1,4 @@
+@use '../global/mixins' as m;
 .modal-entrega{
     width: 100%;
     height: 100vh;
@@ -82,6 +83,10 @@
        justify-content: center;
        align-items: center;
        gap: 2rem;
+       font-size: 1.2rem;
+       @include m.tablet {
+        font-size: 1.7rem;
+       }
 
     }
  
