--- a/src/sass/componentes/_shopModal.scss
+++ b/src/sass/componentes/_shopModal.scss
@@ -1,3 +1,4 @@
+@use '../global/mixins' as m;
 .shop{
     width: 100vw;
     height: 100vh;
@@ -12,6 +13,7 @@
     justify-content: center;
     align-items: center;
     z-index: 380;
+    display: none;
    
     &__content{
         width: 59rem;
@@ -20,6 +22,12 @@
         grid-template-columns: 26rem 1fr;
         background-color: white;
         border-radius: 1.2rem;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transform: scale(0.7);
+        @include m.tablet {
+          transform: scale(1);
+        }
+      
         
     }
     &__background{
@@ -35,14 +43,15 @@
         padding: 1.5rem 3rem;
         display: flex;
         flex-direction: column;
-        gap: 1.5rem;
+        gap: 1.2rem;
     }
     &__figure{
         display: block;
         width: 100%;
-        height: 4.5rem;
+        height: 5rem;
         border-top-right-radius: 1.2rem;
         overflow: hidden;
+        position: relative;
         img{
             max-width: 100%;
             height: auto;
@@ -50,9 +59,21 @@
             object-position: bottom;
         }
     }
-    &__content-texts{
-      
+    &__figure-close{
+        position: absolute;
+        width: 3.5rem;
+        height: 3.5rem;
+        background-color: #2473A6;
+        top: 0.8rem;
+        right: 0.8rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: .5rem;
+        cursor: pointer;
     }
+
+   
     &__title{
        font-family: var(--font-syncopate-bold);
      
@@ -99,12 +120,18 @@
         display: block;
         width: fit-content;
         height: auto;
-        margin: 0 auto;
+        margin-left:  auto;
+        margin-right: -2rem;
+        margin-top: -0.2rem;
         position: relative;
         display: flex;
         align-items: center;
         font-family: var(--font-dela-gothic);
-    
+        cursor: pointer;
+        transition: transform .3s;
+        &:hover{
+            transform: scale(1.02);
+        }
     }
     &__btnAdd-img{
         display: block;
@@ -113,24 +140,39 @@
         justify-content: space-between;
         align-items: center;
     }
-    &__btnAdd-text{
+    &__btnAdd-texts{
+        width: 100%;
+        height: auto;
         display: block;
         position: absolute;
-        left: 2rem;
+        display: flex;
+        justify-content: space-evenly;
+        color: #2473A6;
         transform: rotate(-3deg);
+       
+    }
+    &__btnAdd-text{
+        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap:  1.5rem;
+        font-family: var(--font-dela-gothic);
         &::after{
             content: "";
             width: .1rem;
-            height:2rem;
+            height:2.5rem;
             display: block;
             background-color: blue;
         }
     }
     &__btnAdd-precio{
         display: block;
-        position: absolute;
-        right: 2rem;
-        transform: rotate(-5deg);
+        font-family: var(--font-dela-gothic);
     }
 
+}
+
+.shop.active{
+ display: flex;  
 }
